# explainable-stock-risk-scoring

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: backup.yml  cd.yml  ci.yml  refresh-snapshot.yml
alembic/: env.py  script.py.mako
configs/: model_config.yaml  monitoring_config.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: analyze_categories.py  backup_db.py  build_mock_history_events.py  challenger.py  collect_iv_snapshots.py  compare_features.py  compare_labels.py  compare_vol_models.py  factor_screen.py  generate_sample_replays.py  indicator_accuracy.py  migrate.py  monitor.py  persona_smoke.py  refresh_score_snapshots.py  refresh_snapshots.py  registry.py  risk_on_off_report.py  score.py  smoke.py  tickers_universe.txt  train.py  ui_checklist.md  ui_shot.py  ui_shot.sh  validate_regime_technicals.py  validate_score.py  validate_tail.py  validate_vix_structure.py
snapshots/: 000001_SZ_2y_1d.parquet  0700_HK_2y_1d.parquet  3690_HK_2y_1d.parquet  510300_SS_2y_1d.parquet  600519_SS_2y_1d.parquet  601318_SS_2y_1d.parquet  9988_HK_2y_1d.parquet  AAPL_2y_1d.parquet  README.md  _HSI_2y_1d.parquet
src/stock_risk/: db.py  (+6 more)
tests/: conftest.py  golden_inputs.py  test_admin.py  test_alpha_grid.py  test_api.py  test_auth.py  test_backtest.py  test_backtest_api.py  test_candlestick.py  test_community.py  test_data.py  test_db.py  test_evaluation.py  test_explain.py  test_features.py  test_github_stats.py  test_golden_score.py  test_governance.py  test_labels.py  test_llm.py  test_market_history.py  test_migrations.py  test_models.py  test_moderation.py  test_options_signals.py  test_outcomes.py  test_portfolio.py  test_portfolio_api.py  test_producers.py  test_regime_features.py  test_regime_technicals.py  test_risk_categories.py  test_scorer.py  test_search.py  test_security.py  test_sim_comprehension.py  test_sim_events.py  test_sim_experiments.py  test_sim_fairness.py  test_sim_interpret.py  (+11 more)
ui/: dashboard.py  gradio_app.py
(+189 files in other folders)
